src/yini_test/cases/golden/strict/valid/inline-objects/inline-object-with-list-value.strict.yini
@yini strict

^ Objects
entry = { tags: ["a", "b"] }

/END

