src/yini_test/cases/golden/strict/invalid/inline-objects/inline-object-duplicate-key.strict.yini
@yini strict

^ Objects
entry = { a: 1, a: 2 }

/END

